# tournament_simulations

./: README.md  environment.yml  pyproject.toml  requirements.txt
src/data_structures/: __init__.py
src/data_structures/matches/: matches.py
src/data_structures/points_per_match/: __init__.py  create_points_per_match.py  points_per_match.py
src/data_structures/utils/: __init__.py  types.py
src/example_notebooks/: matches_df_example.py  permutations.ipynb  round_robin.ipynb  schedules.ipynb  simulations.ipynb
src/logs/: __init__.py  logging_decorator.py  logs.py
src/schedules/permutation/: __init__.py  create_match_date_numbers.py  create_permutation_index.py  create_permutation_schedule.py  match_date_numbers.py  matches_permutation.py  matches_permutations.py  permutation_schedule.py
src/schedules/round_robin/: __init__.py  convert_rounds_to_dataframe.py  create_double_round_robin.py  create_single_round_robin.py  double_round_robin.py  single_round_robin.py  types.py
src/simulations/: __init__.py  simulate_matches.py  simulate_points_per_match.py
src/simulations/match_wide/: __init__.py  batch.py  simulate.py
src/simulations/tournament_wide/: __init__.py  batch.py  simulate.py
src/simulations/utils/: batch_simulations.py  simulate_functions.py
src/tests/test_data_structures/: test_create_points_per_match.py  test_matches.py  test_points_per_match.py
src/tests/test_permutations/: test_create_match_date_numbers.py  test_create_ordered_index.py  test_match_date_numbers.py  test_ordered_index.py  (+4 more)
src/tournament_simulations/: __init__.py
(+112 files in other folders)
