[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tournament_simulations"
version = "1.1.0"
authors = [
  {name="Estéfano Bortolini Vassoler", email="estefanobvassoler@gmail.com"},
]
description = "Package for tournament simulations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.23.5", "pandas>=1.4.4"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["tournament_simulations", "tournament_simulations.*"]
exclude = ["tournament_simulations.tests", "tournament_simulations.example_notebooks"]

[project.urls]
"Homepage" = "https://github.com/EstefanoB/tournament_simulations/"
"Bug Tracker" = "https://github.com/EstefanoB/tournament_simulations/issues"

[project.optional-dependencies]
test = ["pytest>=7.1.2"]
notebook = ["jupyterlab"]
lint = ["black>=22.6.0", "flake8>=4.0.1", "isort>=5.9.3"]

[tool.versioneer]
VCS = "git"

[tool.black]
target-version = ['py310']
required-version = '22.6.0'

[tool.pylint.messages_control]
max-line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "7.1.2"
pythonpath = ["src", "src/tournament_simulations"]
testpaths = "src/tests/"